# tart

./: .gitignore  .pytype.cfg  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  tart-gh.sh
.github/workflows/: publish.yml  pytest.yml
docs/: architecture.rst  conf.py  faq.rst  index.rst  installation.rst  make.bat  quickstart.rst  requirements.txt  summary.md  tart.drawio  tart.rst  tutorial_learn.md  tutorial_learn.rst  tutorial_pred.md  tutorial_pred.rst
docs/_api/: tart.inference.rst  tart.representation.rst  tart.rst  tart.utils.rst
docs/_static/: tart-title.drawio  tart.drawio
tart/cli/: cli.py
tart/data/: .gitignore
tart/data/example/embed/raw/: example_1.json
tart/data/example/test/raw/: g1.json
tart/data/example/train/raw/: g2.json
tart/example/: encoder.py  example.sh  example1.py  feat_encoder.py  learn.py  predict.py  tart-config.json  tart_example.py
tart/inference/: embed.py  predict.py
tart/representation/: config.py  dataset.py  encoders.py  models.py  test.py  train.py
tart/utils/: config_utils.py  graph_utils.py  infer_utils.py  model_utils.py  tart_utils.py  train_utils.py
tests/: import_test.py
tests/data/: sample_config.json  sample_graph.json
tests/representation/: test_build_model.py
tests/utils/: test_feat_graph.py  test_read_graph.py  test_tensor_graph.py
